# nattypetester-rs

./: Cargo.toml  readme.md
.github/workflows/: release.yml
src/: cli.rs  defaults.rs  error.rs  lib.rs  main.rs  model.rs  net.rs  output.rs  rfc3489.rs  rfc5780.rs
src/proxy/: socks5.rs
src/stun/: wire.rs
src/transport/: tcp.rs  udp.rs
