[package]
name = "nattypetester"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
humantime = "2.1.0"
native-tls = "0.2.13"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
socket2 = "0.5.8"
thiserror = "2.0.12"
